Use plugin settings for characterization list

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,4 +1,4 @@
 en:
   site_settings:
     characterizer_plugin_enabled: 'Enable characterizer plugin globally?'
-    characterizer_plugin_list: 'Character list.'
+    characterizer_name_list: 'Character list.'
